# Faturamento_de_Energia

./: .dockerignore  .gitignore  Dockerfile  README.md  database.db  docker-compose.yml  pyproject.toml
app/: database.py  main.py  models.py  schemas.py  seed.py
app/routers/: concessionarias.py  faturas.py  titulares.py  unidades.py
tests/: conftest.py  test_concessionarias.py  test_faturas.py  test_titulares.py  test_unidades.py
