[project]
name = "energia-api"
version = "0.1.0"
description = "API de faturamento de energia"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastapi[standard]>=0.116.1",
    "sqlalchemy>=2.0.43",
    "pydantic-settings>=2.10.1",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.18",
    "taskipy>=1.14.1",
    "alembic>=1.16.5",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "single"

[tool.taskipy.tasks]
format = "ruff format ."
lint = "ruff check . --fix"
pre_test = "task lint"
test = "pytest -s -x"
run = "uvicorn app.main:app --reload"
